--- a/index.qmd
+++ b/index.qmd
@@ -158,7 +158,7 @@ plot(time, cashrate, type = "l", lwd = 2 ,col = "grey27", main = "Cash rate targ
 plot(time, lnCPI, type = "l", lwd = 2 ,col = "grey27", main = "ln CPI")
 plot(time, unemprate, type = "l", lwd = 2 ,col = "grey27", main = "Unemployment rate (%)")
 plot(time, lnstockprice, type = "l", lwd = 2 , col = "grey27", main = "ln stock market index price")
-plot(time, ln_gov_exp, type = "l", lwd = 2 ,col = "grey27", main = "ln total government expenditure growth")
+plot(time, ln_gov_exp, type = "l", lwd = 2 ,col = "grey27", main = "ln total government expenditure")
 
 #mtext("Plot of 6 variables (after transforming)", outer = TRUE, cex = 1.1, font = 2, col = "darkslateblue")
 ```
