--- a/index.qmd
+++ b/index.qmd
@@ -950,7 +950,7 @@ rownames(Bplus_df) <- c( "R1", "R2")
 knitr::kable(Bplus_df, caption = "Table 12: Mean of the matrix B+ (The extension model)")
 ```
 
-The mean of $\gamma$ is equal `r gamma.mean` and the trace plot and histogram shown in Figure 6.
+The mean of $\gamma$ is equal `r gamma.mean` and the trace plot and histogram shown in [Figure 6: The plot and histogram of gamma (The extension model)].
 
 ```{r}
 par(mfrow = c(1, 2))
@@ -1362,7 +1362,7 @@ rownames(A_df) <- c( "R1", "R2")
 knitr::kable(A_df, caption = "Table 14: Mean of the variance-covariance matrix (The baseline with stochastic volatility model)")
 ```
 
-The trace plot in Figure 7 confirms that the value of $A_{21}$ and $A_{32}$ oscillate around 1, while $\Sigma_{11}$ and $\Sigma_{22}$ oscillate around 0.002.
+The trace plot in [Figure 7: The trace plot of A and Sigma (The baseline with stochastic volatility model)] confirms that the value of $A_{21}$ and $A_{32}$ oscillate around 1, while $\Sigma_{11}$ and $\Sigma_{22}$ oscillate around 0.002.
 
 ```{r}
 par(mfrow = c(2, 2))
@@ -1398,7 +1398,7 @@ knitr::kable(Bplus_df, caption = "Table 16: Mean of the matrix B+ (The baseline 
 
 
 
-The trace plot and histogram in Figure 8 show that the values of $B_{11}$ and $B_{22}$ are widely spread from 0 to around 25, but all of them are positive, consistent with the imposed restriction.
+The trace plot and histogram in [Figure 8: The trace plot and histogram of B0 matrix (The baseline with stochastic volatility model)] show that the values of $B_{11}$ and $B_{22}$ are widely spread from 0 to around 25, but all of them are positive, consistent with the imposed restriction.
 
 ```{r}
 par(mfrow = c(2, 2))
@@ -1414,7 +1414,7 @@ hist(B0.store[2,2,], breaks=500, border="steelblue",xlab="", main=expression("Hi
 <br>
 
 
-The posterior draw mean of $\sigma^{2}$ for each of period display in Figure 9. The $\sigma^{2}$ moves around 2000.
+The posterior draw mean of $\sigma^{2}$ for each of period display in [Figure 9: The posterior mean of the stochastic volatility]. The $\sigma^{2}$ moves around 2000.
 
 ```{r}
 sigma2.mean <- apply(posterior.draws$H.sv,1,mean) 
@@ -1464,7 +1464,7 @@ rownames(A_df) <- c( "R1", "R2")
 knitr::kable(A_df, digits = 10, caption = "Table 18: Mean of the variance-covariance matrix (The extension with stochastic volatility model)")
 ```
 
-The trace plot and histogram depicted in Figure 10 indicate that the values of $A_{21}$ and $A_{32}$ fluctuate around 1, whereas $\Sigma_{11}$ and $\Sigma_{22}$ are nearly zero.
+The trace plot and histogram depicted in [Figure 10: The trace plot of A and Sigma (The extension with stochastic volatility model)] indicate that the values of $A_{21}$ and $A_{32}$ fluctuate around 1, whereas $\Sigma_{11}$ and $\Sigma_{22}$ are nearly zero.
 
 
 ```{r}
@@ -1499,7 +1499,7 @@ rownames(Bplus_df) <- c( "R1", "R2")
 knitr::kable(Bplus_df, caption = "Table 20: Mean of the matrix B+ (The extension with stochastic volatility model)")
 ```
 
-The trace plot and histogram in Figure 11 reveal that the values of $B_{11}$ and $B_{22}$ span widely from zero to approximately million, confirming the high mean value reported in Table 19.
+The trace plot and histogram in [Figure 11: The trace plot and histogram of B0 matrix (The extension with stochastic volatility model)] reveal that the values of $B_{11}$ and $B_{22}$ span widely from zero to approximately million, confirming the high mean value reported in Table 19.
 
 
 ```{r}
@@ -1515,7 +1515,7 @@ hist(B0.store[2,2,], breaks=500, border="steelblue",xlab="", main=expression("Hi
 
 <br>
 
-The mean value of $\gamma$ is equal `r gamma.mean`, which is close to that of the extension model without incorporating stochastic volatility heteroskedasticity. The plot and histogram shown in Figure 12.
+The mean value of $\gamma$ is equal `r gamma.mean`, which is close to that of the extension model without incorporating stochastic volatility heteroskedasticity. The plot and histogram shown in [Figure 12: The plot and histogram of gamma (The extension with stochastic volatility model)].
 
 ```{r}
 par(mfrow = c(1, 2))
@@ -1529,7 +1529,7 @@ hist(gamma.store, breaks=500, border="steelblue",xlab=expression(gamma), main=ex
 
 <br>
 
-The posterior draw mean of $\sigma^{2}$ for each of period is displayed in Figure 13. For certain periods, $\sigma^{2}$ exhibits a significant increase to a very large value.
+The posterior draw mean of $\sigma^{2}$ for each of period is displayed in [Figure 13: The posterior mean of the stochastic volatility (The extension with stochastic volatility model)]. For certain periods, $\sigma^{2}$ exhibits a significant increase to a very large value.
 
 
 
@@ -1880,7 +1880,7 @@ rownames(B0.inv_df) <- c( "R1", "R2", "R3", "R4", "R5", "R6")
 knitr::kable(B0.inv_df, caption = "Table 24: SD of the B0 inverse matrix (extension model)")
 ```
 
-The mean value of $\gamma$ is equal `r gamma.mean`, which is close to zero. The plot and histogram shown in [Figure 16: The plot and histogram of gamma (The extension model)] confirms that the draw oscillates around 0.0015.
+The mean value of $\gamma$ is equal `r gamma.mean`, which is close to zero. The plot and histogram shown in [Figure 16: The plot and histogram of gamma (The extension model)] confirms that the draw oscillates around the mean.
 
 ```{r}
 par(mfrow = c(1, 2))
@@ -2067,9 +2067,7 @@ for (n in 1:N){
 </div>
 
 
-The [Figure 21: The impulse response to the monetary shock (the baseline with stochastic volatility model)] displays the impulse response differently from how it is represented in the previous two models. We cannot observe the cash rate normalizing around three years after the shock. Moreover, the CPI decreases at the same time as the monetary shock. However, it exhibits an increasing trend, tending to recover five years after the shock. Additionally, we cannot observe the unemployment rate increase that was seen at the same time in the previous two models. All of these variables remain not significantly different from zero.
-
-
+The [Figure 21: The impulse response to the monetary shock (the baseline with stochastic volatility model)] displays the impulse response differently from how it is represented in the previous two models. We do not observe the cash rate normalizing around three years after the shock. Furthermore, the CPI decreases at the same time as the monetary shock. However, it exhibits an increasing trend, eventually recovering five years after the shock.  Additionally, we do not observe the unemployment rate increase that was seen contemporaneously in the previous two models, but it increases slightly after 2 years of the shock. Overall, the impulse response magnitude for all variables in the system of this model is lower compared to the former two models. Hence, considered together with the confidence interval, they are not significantly different from zero.
 
 
 ## The extension with Stochastic volatillity model
@@ -2125,7 +2123,7 @@ hist(B0.inv.store[6,6,], breaks=500, border="steelblue",xlab="", main=expression
 
 <br>
 
-The mean value of $\gamma$ is equal `r gamma.mean`, which is close to zero and also almost the same as before the author incorporates the stochastic volatility. The plot and histogram shown in [Figure 23: The plot and histogram of gamma (The extension with stochastic volatility model)].
+The mean value of $\gamma$ is equal `r gamma.mean`, which is close to zero. This value is also very similar to what it was before the author incorporated stochastic volatility, as shown in [Figure 23: The plot and histogram of gamma (The extension with stochastic volatility model)].
 
 
 ```{r}
@@ -2158,7 +2156,7 @@ abline(h=mean(sigma2.mean),lty=2)
 
 ### Impulse response function
 
-However, the [Figure 25: The impulse response to the monetary shock (the extension with stochastic volatility model)], displays the point estimate impulse response as a flat line, indicating a value actually close to zero. The 68% confidence interval is also flat. We cannot observe any significant effect on all six variables in the system. One possible explanation is that we might need more observations to capture the heteroskedasticity, which, in this case, is not sufficient.
+However, the [Figure 25: The impulse response to the monetary shock (the extension with stochastic volatility model)], displays the point estimate impulse response as a flat line, indicating a value actually close to zero. The 68% confidence interval is also flat. We cannot observe any significant effect on all six variables in the system. One possible explanation is that we might need more observations to capture the heteroskedasticity, which, in this case, is not sufficient. This may be due to poor estimation of $\sigma^{2}$ since we have seen the value is incredibly high.
 
 ```{r}
 IRF               <- compute_IRF(h, S2, N, p)
